--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "dependencies": {
+    "@hotwired/stimulus": "^3.0.0-beta.1",
     "@rails/actioncable": "latest",
     "@rails/activestorage": "latest",
     "@rails/webpacker": "^6.0.0-rc.5",
